[gd_scene load_steps=4 format=3 uid="uid://cyhx0tmmpnylm"]

[ext_resource type="Theme" uid="uid://dpqnmj3en2tdc" path="res://themes/in_game_overlay.tres" id="1_1roc3"]
[ext_resource type="Script" path="res://scripts/ui/pause_screen.gd" id="2_t7lpy"]
[ext_resource type="PackedScene" uid="uid://dfmosyv7gsyw7" path="res://scenes/ui/follow_return_button.tscn" id="3_p4tk4"]

[node name="pause_screen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1roc3")
script = ExtResource("2_t7lpy")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="continue_button" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../exit_button")
text = "CONTINUE"

[node name="exit_button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer" instance=ExtResource("3_p4tk4")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../continue_button")
text = "EXIT"

[connection signal="pressed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/continue_button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/exit_button" to="." method="_on_button_pressed"]
